test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/static_for_loop_counter.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[41]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(0)
  ;
  for
  (
  static
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  <
  const int(10)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  )
  {
  identifier(x)
  =
  identifier(x)
  +
  const int(1)
  ;
  }
  return
  identifier(x)
  ;
  }
